--- a/clase_08/config.json
+++ b/clase_08/config.json
@@ -1,18 +1,23 @@
 {
-    "browser_name" : "firefox",
-    "path" : "./drivers/geckodriver.exe",
-    "url_app" : "https://laboratorio.qaminds.com/",
-    "incognito" : true, 
-    "headless" :{
-        "enabled" : false,
+    "browser_name" : "chrome",
+    "driver_path" : "./drivers/chromedriver.exe",
+    "url_app" : "https://demo.seleniumeasy.com/bootstrap-download-progress-demo.html",
+    "incognito" : true,
+    "headless" : {
+        "enabled" : true,
         "resolution" : {
-            "width" : 1900,
+            "width" : 1920,
             "height" : 1080
         }
     },
-    "page_load" : 10,
-    "implicit_wait:" : {
-        "enabled" : true,
+    "page_load" : 15,
+    "implicit_wait" : {
+        "enabled" : false,
         "time" : 2
+    },
+    "explicit_wait" : {
+        "small" : 5,
+        "medium" : 10,
+        "large" : 30
     }
 }
